--- a/core/web/build.gradle
+++ b/core/web/build.gradle
@@ -9,5 +9,6 @@ repositories {
 
 dependencies {
 	providedCompile 'javax.servlet:javax.servlet-api:3.0.1'
-	compile project(':ejb')	
+	compile group: 'log4j', name: 'log4j', version: '1.2.17'
+	providedCompile project(':ejb')	
 }
