Tried to make app use Hibernate 5.1.0 which failed.
Now We should manage indices because hibernate 5.1.0 seems to have
issues with it's schema creation;
- Enum fields are translated to blob (even if @Enumerated is used)
- Indexes are not generated as per entity definition

--- a/.settings/.gitignore
+++ b/.settings/.gitignore
@@ -1,2 +1,5 @@
 /org.eclipse.jdt.core.prefs
 /org.eclipse.wst.common.project.facet.core.xml
+/org.eclipse.jpt.core.prefs
+/org.eclipse.wst.common.project.facet.core.prefs.xml
+/org.hibernate.eclipse.console.prefs
